--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,9 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
+
+    <div class="brand">Catalyst Technical Group, INC.</div>
+    <div class="address-bar">23501 Cinco Ranch Blvd, Suite H120 #113 | Katy, TX 77494 | 713.906.6177</div>
 
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -40,7 +41,7 @@
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
-                    <li><a href="blog.html">Blog</a>
+                    <li><a href="services.html">Services</a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
@@ -57,27 +58,26 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Contact <strong>business casual</strong>
+                    <h2 class="intro-text text-center">Contact <strong>CTG, INC.</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-md-8">
-                    <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
-                    <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3464.188148441147!2d-95.7751626!3d29.743267500000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864121263380d9a5%3A0x66a3a353c8d86438!2s23501+Cinco+Ranch+Blvd+%23113!5e0!3m2!1sen!2sus!4v1401151969202" width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                 </div>
                 <div class="col-md-4">
-                    <p>Phone: <strong>555.519.2013</strong>
+                    <p>Phone: <strong>713.906.6177</strong>
                     </p>
-                    <p>Email: <strong>feedback@startbootstrap.com</strong>
+                    <p>Email: <strong>info@texasctgroup.com</strong>
                     </p>
-                    <p>Address: <strong>The Plaza<br>5483 Start Bootstrap Ave.<br>Beverley Hills, CA 26829</strong>
+                    <p>Address: <strong><br>Catalyst Technical Group, INC.<br>23501 Cinco Ranch Blvd, <br>Suite H120 #113<br>Katy, TX 77494</strong>
                     </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
@@ -112,7 +112,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
     <!-- /.container -->
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>Copyright &copy; CTG 2013</p>
                 </div>
             </div>
         </div>
