--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual Template for Bootstrap</title>
+    <title>CTG, INC.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -18,8 +18,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
+    <div class="brand">Catalyst Technical Group, INC.</div>
+    <div class="address-bar">23501 Cinco Ranch Blvd, Suite H120 #113 | Katy, TX 77494 | 713.906.6177</div>
 
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Catalyst Technical Group, INC.</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,7 +40,7 @@
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
-                    <li><a href="blog.html">Blog</a>
+                    <li><a href="services.html">Services</a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
@@ -89,11 +89,11 @@
                         <small>Welcome to</small>
                     </h2>
                     <h1>
-                        <span class="brand-name">Business Casual</span>
+                        <span class="brand-name">Catalyst Technical Group, INC.</span>
                     </h1>
                     <hr class="tagline-divider">
                     <h2>
-                        <small>By <strong>Start Bootstrap</strong></small>
+                        <small></small>
                     </h2>
                 </div>
             </div>
@@ -135,7 +135,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>Copyright &copy; CTG 2013</p>
                 </div>
             </div>
         </div>
