--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Contact - Business Casual Template for Bootstrap</title>
+    <title>CTG, INC. - Contact</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">CTG, INC.</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
