fixed site changed colors

--- a/resources.html
+++ b/resources.html
@@ -44,11 +44,11 @@
                     </li>
                     <li><a href="projects.html">Projects</a>
                     </li>
-                    <li><a href="services.html" class="active">Services</a>
+                    <li><a href="services.html">Services</a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
-                    <li><a href="resources.html">Resources</a>
+                    <li><a href="resources.html" class="active">Resources</a>
                     </li>
                 </ul>
             </div>
