--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,17 @@
 
     <!-- Add custom CSS here -->
     <link href="css/business-casual.css" rel="stylesheet">
+    <link href="img/logo.ico" rel="shortcut icon">
 </head>
 
 <body>
 
 
-    <div class="brand">Catalyst Technical Group, INC.</div>
-    <div class="address-bar">23501 Cinco Ranch Blvd, Suite H120 #113 | Katy, TX 77494 | 713.906.6177</div>
+    <div class="brand-wrapper">
+        <div class="container">
+            <div class="brand">Catalyst Technical Group, INC.</div>
+        </div>
+    </div>
 
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -39,11 +43,13 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="about.html">About</a>
+                    <li><a href="projects.html">Projects</a>
                     </li>
                     <li><a href="services.html">Services</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
+                    <li><a href="contact.html" class="active">Contact</a>
+                    </li>
+                    <li><a href="resources.html">Resources</a>
                     </li>
                 </ul>
             </div>
@@ -121,7 +127,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; CTG 2013</p>
+                    <p>Copyright &copy; CTG 2014</p>
                 </div>
             </div>
         </div>
