--- a/index.html
+++ b/index.html
@@ -75,32 +75,39 @@
         
         <div class="row">
             <div class="tab-container">
-                <div class="col-lg-12">
-                    <div class="col-md-9">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="tab-box">Civil Engineering</div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="tab-box">Structural</div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="tab-box">MEP</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="tab-box">Architectural</div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="tab-box">Permit Co-ordination</div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="tab-box">Platting</div>
-                            </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="tab-box">
+                            <h4>Civil Engineering</h4>
                         </div>
                     </div>
-                    <div class="col-md-3"></div>
+                    <div class="col-md-4">
+                        <div class="tab-box">
+                            <h4>Structural</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="tab-box">
+                            <h4>MEP</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="tab-box">
+                            <h4>Architectural</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="tab-box">
+                            <h4>Permit Co-ordination</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="tab-box">
+                            <h4>Platting</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
