--- a/resources.html
+++ b/resources.html
@@ -21,7 +21,11 @@
 
     <div class="brand-wrapper">
         <div class="container">
-            <div class="brand">Catalyst Technical Group, INC.</div>
+            <div class="brand">
+                <a href="index.html">
+                    <img src="img/logo.png" class="logo"></img>Catalyst Technical Group, INC.
+                </a>
+            </div>
         </div>
     </div>
 
@@ -46,9 +50,9 @@
                     </li>
                     <li><a href="services.html">Services</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
-                    </li>
                     <li><a href="resources.html" class="active">Resources</a>
+                    </li>
+                    <li><a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -63,82 +67,47 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Services with <strong>CTG, INC.</strong>
+                    <h2 class="intro-text text-center">Additional Resources</strong>
                     </h2>
                     <hr>
+                    <div class="resources-info">
+                        <dl>
+                          <dt>City of Houston</dt>
+                          <dd><a href="http://www.houstontx.gov" target="houstontx">http://www.houstontx.gov</a></dd>
+                        </dl>
+                        <dl>
+                          <dt>Permit status city of Houston</dt>
+                          <dd><a href="http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp" target="permitStatus">http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp</a></dd>
+                        </dl>
+                        <dl>
+                          <dt>Geographic Information & Management System- Publics works and engineering City of Houston , GIS </dt>
+                          <dd><a href="www.gims.houstontx.gov" target="GIMS">www.gims.houstontx.gov</a></dd>
+                        </dl>
+                        <dl>
+                          <dt>Harris County</dt>
+                          <dd><a href="www.co.harris.tx.us" target="harris">Harris County</a></dd>
+                        </dl>
+                        <dl>
+                          <dt>Permit</dt>
+                          <dd><a href="http://www.eng.hctx.net/PERMITSs" target="permits">http://www.eng.hctx.net/PERMITSs</a></dd>
+                        </dl>
+                        <dl>
+                          <dt>Geographic Information & Management System- Publics works and engineering - Harris County, GIS</dt>
+                          <dd><a href="http://www.co.harris.tx.us/itc/gis" target="GIMSHarris">http://www.co.harris.tx.us/itc/gis</a></dd>
+                        </dl>
+                        <dl>
+                          <dt>FEMA: Flood areas</dt>
+                          <dd>
+                              <a href="www.fema.gov" target="fema">www.fema.gov</a>
+                              <a href="www.msc.fema.gov" target="femaMSC">www.msc.fema.gov</a>
+                              <a href="www.tsarp.org" target="femaTsarp">www.tsarp.org</a>
+                          </dd>
+                        </dl>
+                    </div>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Civil</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Structural</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">MEP</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Architectural</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
     </div>
     <!-- /.container -->
 
