--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,13 @@
 </head>
 
 <body>
-
-
     <div class="brand-wrapper">
         <div class="container">
-            <div class="brand">Catalyst Technical Group, INC.</div>
+            <div class="brand">
+                <a href="index.html">
+                    <img src="img/logo.png" class="logo"></img>Catalyst Technical Group, INC.
+                </a>
+            </div>
         </div>
     </div>
 
@@ -47,9 +49,9 @@
                     </li>
                     <li><a href="services.html">Services</a>
                     </li>
-                    <li><a href="contact.html" class="active">Contact</a>
-                    </li>
                     <li><a href="resources.html">Resources</a>
+                    </li>
+                    <li><a href="contact.html" class="active">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -83,43 +85,43 @@
             </div>
         </div>
 
-        <!-- <div class="row">
+        <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">Contact <strong>form</strong>
                     </h2>
                     <hr>
-                    <p>This contact form is just the form elements, it is not a working form. You will have to make the form work by yourself, or take it out if you can't figure out how to make it work.</p>
-                    <form role="form">
+                    <p id="message" class="alert">
+                    </p>
+                    <form role="form" id="formContactUs">
                         <div class="row">
                             <div class="form-group col-lg-4">
                                 <label>Name</label>
-                                <input type="text" class="form-control">
+                                <input id="txtContactName" name="contact_name" type="text" class="form-control">
                             </div>
                             <div class="form-group col-lg-4">
                                 <label>Email Address</label>
-                                <input type="email" class="form-control">
+                                <input id="txtContactEmail" name="contact_email" type="email" class="form-control">
                             </div>
                             <div class="form-group col-lg-4">
                                 <label>Phone Number</label>
-                                <input type="tel" class="form-control">
+                                <input id="txtContactPhone" name="contact_phone" type="tel" class="form-control">
                             </div>
                             <div class="clearfix"></div>
                             <div class="form-group col-lg-12">
                                 <label>Message</label>
-                                <textarea class="form-control" rows="6"></textarea>
+                                <textarea id="contact_message" name="contact_message" class="form-control" rows="6"></textarea>
                             </div>
                             <div class="form-group col-lg-12">
                                 <input type="hidden" name="save" value="contact">
-                                <button type="submit" class="btn btn-default">Submit</button>
+                                <button id="btnSubmit" type="submit" class="btn btn-default">Submit</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-        </div> -->
-
+        </div>
     </div>
     <!-- /.container -->
 
@@ -136,7 +138,36 @@
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
-
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#btnSubmit').click(function() {
+                alert("reached");
+                $.ajax({
+                    type : 'POST',
+                    url : './contact_submit.php',
+                    dataType : 'json',
+                    data: {
+                        contact_email : $('#txtContactEmail').val(),
+                        contact_name : $('#txtContactName').val(),
+                        contact_message : $('#txtContactMessage').val(),
+                        contact_phone: $('#txtContactPhone').val()
+                    },
+                    success : function(data){
+                        $('#message').removeClass().addClass((data.error === true) ? 'alert alert-danger' : 'alert alert-success')
+                        .text(data.msg);
+                    },
+                    error : function(XMLHttpRequest, textStatus, errorThrown) {
+                        $('#message').removeClass().addClass('alert alert-danger')
+                        .text('There was an error.');
+                        console.log(XMLHttpRequest);
+                    }
+                
+                });
+                return false;
+            });
+        });
+    </script>
 </body>
 
 </html>
+
