--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 
     <div class="brand-wrapper">
         <div class="container">
-            <div class="brand">Catalyst Technical Group, INC.</div>
+            <div class="brand">
+                <a href="index.html">
+                    <img src="img/logo.png" class="logo"></img>Catalyst Technical Group, INC.
+                </a>
+            </div>
         </div>
     </div>
 
@@ -46,9 +50,9 @@
                     </li>
                     <li><a href="services.html">Services</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
-                    </li>
                     <li><a href="resources.html">Resources</a>
+                    </li>
+                    <li><a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -63,7 +67,7 @@
         <div class="row">
             <div class="box">
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/civil.jpg" alt="" style="width:500px;height:300px">
+                    <img class="img-responsive img-border-left" src="img/civil.jpg" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>CTG, Inc., provides a wide array of civil engineering and related consulting services for single family, multi-family, commercial, and mixed use site and land development projects throughout Texas. Our clients include private and public sector project owners. </p>
