--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,11 @@
 
     <div class="brand-wrapper">
         <div class="container">
-            <div class="brand">Catalyst Technical Group, INC.</div>
+            <div class="brand">
+                <a href="index.html">
+                    <img src="img/logo.png" class="logo"></img>Catalyst Technical Group, INC.
+                </a>
+            </div>
         </div>
     </div>
 
@@ -47,9 +51,9 @@
                     </li>
                     <li><a href="services.html">Services</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
-                    </li>
                     <li><a href="resources.html">Resources</a>
+                    </li>
+                    <li><a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -59,57 +63,51 @@
     </nav>
 
     <div class="container">
+        <div class="box">
+            <div class="row">
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h4>John Smith
+                        <small>Job Title</small>
+                    </h4>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h4>John Smith
+                        <small>Job Title</small>
+                    </h4>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h4>John Smith
+                        <small>Job Title</small>
+                    </h4>
+                </div>
+                <div class="clearfix"></div>
+            </div>
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">About <strong>CTG, INC.</strong>
-                    </h2>
-                    <hr>
+            <div class="row">
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h4>John Smith
+                        <small>Job Title</small>
+                    </h4>
                 </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/civil.jpg" alt="">
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h4>John Smith
+                        <small>Job Title</small>
+                    </h4>
                 </div>
-                <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h4>John Smith
+                        <small>Job Title</small>
+                    </h4>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Our <strong>Team</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
     </div>
     <!-- /.container -->
 
