--- a/services.html
+++ b/services.html
@@ -21,7 +21,11 @@
 
     <div class="brand-wrapper">
         <div class="container">
-            <div class="brand">Catalyst Technical Group, INC.</div>
+            <div class="brand">
+                <a href="index.html">
+                    <img src="img/logo.png" class="logo"></img>Catalyst Technical Group, INC.
+                </a>
+            </div>
         </div>
     </div>
 
@@ -46,9 +50,9 @@
                     </li>
                     <li><a href="services.html" class="active">Services</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
-                    </li>
                     <li><a href="resources.html">Resources</a>
+                    </li>
+                    <li><a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -58,87 +62,40 @@
     </nav>
 
     <div class="container">
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Services with <strong>CTG, INC.</strong>
-                    </h2>
-                    <hr>
+        <div class="service-container">
+            <div class="row">
+                <div class="col-md-6 services-img">
+                asdfasdfasdfasdfasdfasdf
                 </div>
-                <div class="clearfix"></div>
+                <div class="col-md-6 services-img-alt">
+                    asdfasdfasdfasdfasdfasdf
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 services-img-alt">
+                asdfasdfasdfasdfasdfasdf
+                </div>
+                <div class="col-md-6 services-img">
+                    asdfasdfasdfasdfasdfasdf
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 services-img">
+                asdfasdfasdfasdfasdfasdf
+                </div>
+                <div class="col-md-6 services-img-alt">
+                    asdfasdfasdfasdfasdfasdf
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 services-img-alt">
+                asdfasdfasdfasdfasdfasdf
+                </div>
+                <div class="col-md-6 services-img">
+                    asdfasdfasdfasdfasdfasdf
+                </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Civil</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Structural</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">MEP</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Architectural</h2>
-                    <hr>
-                    <p>
-                        Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    </p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
     </div>
     <!-- /.container -->
 
