--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
     <link href="img/logo.ico" rel="shortcut icon">
 </head>
 
@@ -81,34 +81,34 @@
             <div class="tab-container">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="tab-box">
+                        <div class="tab-box tab-box-image tab-box-civil">
                             <h4>Civil Engineering</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box">
+                        <div class="tab-box tab-box-image tab-box-structural">
                             <h4>Structural</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box">
+                        <div class="tab-box tab-box-image tab-box-mep">
                             <h4>MEP</h4>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="tab-box">
+                        <div class="tab-box tab-box-image tab-box-architecture">
                             <h4>Architectural</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box">
+                        <div class="tab-box tab-box-image tab-box-permit">
                             <h4>Permit Co-ordination</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box">
+                        <div class="tab-box tab-box-image tab-box-plat">
                             <h4>Platting</h4>
                         </div>
                     </div>
