--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
 </head>
 
 <body>
