changes to service page

--- a/services.html
+++ b/services.html
@@ -64,35 +64,92 @@
     <div class="container">
         <div class="service-container">
             <div class="row">
-                <div class="col-md-6 services-img">
-                asdfasdfasdfasdfasdfasdf
+                <div class="col-md-4 tab-box-civil services-img">
                 </div>
-                <div class="col-md-6 services-img-alt">
-                    asdfasdfasdfasdfasdfasdf
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 services-img-alt">
-                asdfasdfasdfasdfasdfasdf
-                </div>
-                <div class="col-md-6 services-img">
-                    asdfasdfasdfasdfasdfasdf
+                <div id="civil" class="col-md-8 services-content">
+                    <h2 class="intro-text text-center">CIVIL ENGINEERING</h2>
+                    <p class="service-content-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 services-img">
-                asdfasdfasdfasdfasdfasdf
+                <div class="col-md-4 services-img tab-box-structural">
+                
                 </div>
-                <div class="col-md-6 services-img-alt">
-                    asdfasdfasdfasdfasdfasdf
+                <div id="structural" class="col-md-8 services-content">
+                    <h2 class="intro-text text-center">STRUCTURAL</h2>
+                    <p class="service-content-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 services-img-alt">
-                asdfasdfasdfasdfasdfasdf
+                <div class="col-md-4 services-img tab-box-mep">
+
                 </div>
-                <div class="col-md-6 services-img">
-                    asdfasdfasdfasdfasdfasdf
+                <div id="mep" class="col-md-8 services-content">
+                    <h2 class="intro-text text-center">MEP</h2>
+                    <p class="service-content-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 services-img tab-box-architecture">
+
+                </div>
+                <div id="architectural" class="col-md-8 services-content">
+                    <h2 class="intro-text text-center">ARCHITECTURAL</h2>
+                    <p class="service-content-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 services-img tab-box-permit">
+
+                </div>
+                <div id="permit" class="col-md-8 services-content">
+                    <h2 class="intro-text text-center">PERMIT CO-ORDINATION</h2>
+                    <p class="service-content-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 services-img tab-box-plat">
+
+                </div>
+                <div id="platting" class="col-md-8 services-content">
+                    <h2 class="intro-text text-center">PLATTING</h2>
+                    <p class="service-content-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
                 </div>
             </div>
         </div>
