--- a/index.html
+++ b/index.html
@@ -81,36 +81,48 @@
             <div class="tab-container">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="tab-box tab-box-image tab-box-civil">
-                            <h4>Civil Engineering</h4>
-                        </div>
+                        <a href="./services.html#civil">
+                            <div class="tab-box tab-box-image tab-box-civil">
+                                <h4>Civil Engineering</h4>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box tab-box-image tab-box-structural">
-                            <h4>Structural</h4>
-                        </div>
+                        <a href="./services.html#structural">
+                            <div class="tab-box tab-box-image tab-box-structural">
+                                <h4>Structural</h4>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box tab-box-image tab-box-mep">
-                            <h4>MEP</h4>
-                        </div>
+                        <a href="./services.html#mep">
+                            <div class="tab-box tab-box-image tab-box-mep">
+                                <h4>MEP</h4>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="tab-box tab-box-image tab-box-architecture">
-                            <h4>Architectural</h4>
-                        </div>
+                        <a href="./services.html#architectural">
+                            <div class="tab-box tab-box-image tab-box-architecture">
+                                <h4>Architectural</h4>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box tab-box-image tab-box-permit">
-                            <h4>Permit Co-ordination</h4>
-                        </div>
+                        <a href="./services.html#permit">
+                            <div class="tab-box tab-box-image tab-box-permit">
+                                <h4>Permit Co-ordination</h4>
+                            </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="tab-box tab-box-image tab-box-plat">
-                            <h4>Platting</h4>
-                        </div>
+                        <a href="./services.html#platting">
+                            <div class="tab-box tab-box-image tab-box-plat">
+                                <h4>Platting</h4>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
