--- a/resources.html
+++ b/resources.html
@@ -67,40 +67,41 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Additional Resources</strong>
+                    <h2 class="intro-text text-center">
+                    Additional Resources
                     </h2>
                     <hr>
                     <div class="resources-info">
                         <dl>
                           <dt>City of Houston</dt>
-                          <dd><a href="http://www.houstontx.gov" target="houstontx">http://www.houstontx.gov</a></dd>
+                          <dd><a href="http://www.houstontx.gov" target="houstontx" title="">http://www.houstontx.gov</a></dd>
                         </dl>
                         <dl>
                           <dt>Permit status city of Houston</dt>
-                          <dd><a href="http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp" target="permitStatus">http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp</a></dd>
+                          <dd><a href="http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp" target="permitStatus" title="">http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp</a></dd>
                         </dl>
                         <dl>
                           <dt>Geographic Information & Management System- Publics works and engineering City of Houston , GIS </dt>
-                          <dd><a href="www.gims.houstontx.gov" target="GIMS">www.gims.houstontx.gov</a></dd>
+                          <dd><a href="www.gims.houstontx.gov" target="GIMS" title="">www.gims.houstontx.gov</a></dd>
                         </dl>
                         <dl>
                           <dt>Harris County</dt>
-                          <dd><a href="www.co.harris.tx.us" target="harris">Harris County</a></dd>
+                          <dd><a href="www.co.harris.tx.us" target="harris" title="">Harris County</a></dd>
                         </dl>
                         <dl>
                           <dt>Permit</dt>
-                          <dd><a href="http://www.eng.hctx.net/PERMITSs" target="permits">http://www.eng.hctx.net/PERMITSs</a></dd>
+                          <dd><a href="http://www.eng.hctx.net/PERMITSs" target="permits" title="">http://www.eng.hctx.net/PERMITSs</a></dd>
                         </dl>
                         <dl>
                           <dt>Geographic Information & Management System- Publics works and engineering - Harris County, GIS</dt>
-                          <dd><a href="http://www.co.harris.tx.us/itc/gis" target="GIMSHarris">http://www.co.harris.tx.us/itc/gis</a></dd>
+                          <dd><a href="http://www.co.harris.tx.us/itc/gis" target="GIMSHarris" title="">http://www.co.harris.tx.us/itc/gis</a></dd>
                         </dl>
                         <dl>
                           <dt>FEMA: Flood areas</dt>
                           <dd>
-                              <a href="www.fema.gov" target="fema">www.fema.gov</a>
-                              <a href="www.msc.fema.gov" target="femaMSC">www.msc.fema.gov</a>
-                              <a href="www.tsarp.org" target="femaTsarp">www.tsarp.org</a>
+                              <a href="www.fema.gov" target="fema" title="">www.fema.gov</a><br/>
+                              <a href="www.msc.fema.gov" target="femaMSC" title="">www.msc.fema.gov</a><br/>
+                              <a href="www.tsarp.org" target="femaTsarp" title="">www.tsarp.org</a>
                           </dd>
                         </dl>
                     </div>
