making changes to content

--- a/index.html
+++ b/index.html
@@ -66,8 +66,28 @@
                         <img class="img-responsive img-border-left" src="img/civil.jpg" alt="">
                     </div>
                     <div class="col-md-12">
-                        <p>CTG, Inc., provides a wide array of civil engineering and related consulting services for single family, multi-family, commercial, and mixed use site and land development projects throughout Texas. Our clients include private and public sector project owners. </p>
-                        <p>Our team of professional civil engineers, certified land planners, and land use consultants has decades of combined market-leading experience in the Austin, Dallas, Houston, San Antonio, and broader Texas markets.</p>
+                        <p>
+                            Catalyst Technical Group, Inc. (CTG) is a <strong>ONE STOP SHOP</strong> for Project Planning and Permitting. CTG offers 
+                            many advantages in the execution of work on your project, offering expertise in <strong>Planning & Design, 
+                            Architecture, Civil, MEP, Structural Engineering and Construction Administration</strong> under one roof. We 
+                            provide the client with a knowledge-based company to complete a project in a functional and creative 
+                            manner. We focus on solid design and sound planning with the needs and desires of our clients as our 
+                            main priority. Our team of professionals have extensive experience in providing comprehensive design 
+                            and consulting services from project conception to completion.
+                        </p>
+                        <p>
+                            CTG provides high quality design in a wide array of industries including <strong>Commercial, Hospitality, Retail
+                            and Residential etc.</strong> Our diversity and expansive project knowledge is considered our largest asset. CTG 
+                            has completed designs for various types of projects throughout Texas.
+                        </p>
+                        <p>
+                            Catalyst Technical Group  has found great success utilizing a team approach that has lead to effectively 
+                            identifying problems and defining solutions. Our association with a multitude of design firms provides us 
+                            with a strong base for tackling all kinds of your Engineering needs, irrespective of their size and 
+                            geographic location. An energetic and innovative design staff along with the comprehensive use of 
+                            technology allows us to work efficiently and precisely, creating an on time delivery as well as lower 
+                            costs.
+                        </p>
                     </div>
                 </div>
             </div>
