--- a/services.html
+++ b/services.html
@@ -67,26 +67,59 @@
                 <div id="civil" class="col-md-8 services-content">
                     <h2 class="intro-text text-center">CIVIL ENGINEERING</h2>
                     <p class="service-content-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Catalyst Technical Group's engineers and project managers have earned a reputation for delivering timely and economical
+                        solutions to virtually every type of civil engineering challenge. We command comprehensive and up to date knowledge of 
+                        local and state regulations. Over the many years that we have practiced throughout the state, we have developed helpful 
+                        professional relationships with key decision makers that facilitate clear and effective communication.
+                        <br/><br/>
+                        We are highly efficient at obtaining the necessary entitlements, wherever our clients are building. Our engineering 
+                        professionals review all relevant technical requirements, develop advanced modeling of critical systems and prepare final 
+                        construction drawings. By helping to define solutions and expedite processes throughout construction, we keep projects 
+                        moving to successful completion.
+                        <br/><br/>
+                        Catalyst Technical Group's civil engineering services include:
+                        <ul>
+                            <li>Site Master Planning
+                                <ul>
+                                    <li>Site & Subdivision Design</li>
+                                    <li>Water supply and distribution</li>
+                                    <li>Wastewater collection</li>
+                                    <li>Street design</li>
+                                </ul>
+                            </li>
+                            <li>Site Planning & Design</li>
+                            <li>Development assessment and feasibility</li>
+                            <li>Storm drainage and stormwater management</li>
+                            <li>Utility Design</li>
+                            <li>Erosion Control Plan Development</li>
+                            <li>Storm Water Quality Design</li>
+                            <li>Paving Design</li>
+                        </ul>
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 services-img tab-box-structural">
-                
                 </div>
                 <div id="structural" class="col-md-8 services-content">
                     <h2 class="intro-text text-center">STRUCTURAL</h2>
                     <p class="service-content-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Our structural engineering services bring to life the visions of the owner, architect and builder. CTG,Inc. 
+                        provides engineering solution to a variety of complex structural challenges encountered to make the 
+                        design a reality. We do it by combining a depth of experience designing varying foundation and framing 
+                        systems with a set of specialized skills in Commercial, Hospitality, Retail, building restorations and 
+                        building expansions. Our thorough understanding of complex building programs benefits each project, 
+                        using best practices to create appropriate design solutions that will provide long-term value to our client.
+                        <br/><br/>
+                        Our structural engineering expertise includes:
+                        
+                        <ul>
+                            <li>Framing Systems (For Residential and Commercial Structures)</li>
+                            <li>Deep, Intermediate and Shallow Foundation Systems</li>
+                            <li>Tilt wall panels & Masonry structures</li>
+                            <li>Building Evaluations</li>
+                            <li>Investigations</li>
+                        </ul>
                     </p>
                 </div>
             </div>
@@ -97,11 +130,13 @@
                 <div id="mep" class="col-md-8 services-content">
                     <h2 class="intro-text text-center">MEP</h2>
                     <p class="service-content-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        CTG provides Mechanical, HVAC, Electrical, and Plumbing (MEP) services for its diverse clients. Company 
+                        professionals are highly-experienced in the design of systems of new construction, as well as retrofit of 
+                        existing structures with the need to balance functionality, cost, energy conservation and integration 
+                        with aesthetic architectural elements.
+                        <br/><br/>
+                        The firm utilizes state-of-the-art tools, including AutoCAD and Bidding Information Modeling (BIM) in 
+                        the design of smart and efficient MEP systems.
                     </p>
                 </div>
             </div>
@@ -112,11 +147,13 @@
                 <div id="architectural" class="col-md-8 services-content">
                     <h2 class="intro-text text-center">ARCHITECTURAL</h2>
                     <p class="service-content-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Catalyst Technical Group, Inc.  provides high quality architectural design services. The Firm's multi-faceted partners hold over decade of combined architectural, building and planning expertise. Over the 
+                        years, Catalyst Technical Group, Inc. has reinforced the true professionalism of architectural design with unique personal service and an attention to detail seldom found today. This has resulted in a variety of 
+                        progressive design services from problem-solving through project delivery to exceeding client 
+                        expectations Also, all work completed by our dedicated design team is offered in 3D renderings, so you 
+                        can see exactly what your new project will look like. The goal of the design team at Catalyst Technical 
+                        Group, Inc. is to be fully accessible to our clients. Serving Texas residents, Catalyst Technical Group, Inc.   
+                        is a dependable architectural design team that works hard to keep every project within budge
                     </p>
                 </div>
             </div>
@@ -127,11 +164,22 @@
                 <div id="permit" class="col-md-8 services-content">
                     <h2 class="intro-text text-center">PERMIT CO-ORDINATION</h2>
                     <p class="service-content-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
-                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Permitting to facilitate construction of improvements is a critical element in the overall project 
+                        management process. Permitting can be extremely time consuming and may result in project delays and cost 
+                        overruns. It is therefore critical that members of the design team work closely with the client, 
+                        other consultants, and the respective agencies to identify issues of importance to regulatory 
+                        agencies during early stages of the design process.
+                        <br/><br/>
+                        To facilitate an orderly flow of our design services, Catalyst Technical Group utilizes a hands-on 
+                        approach, meeting early in the process with any regulatory agencies having jurisdiction over the 
+                        site to evaluate their standards and assess the issues relative to their approval process. Our 
+                        project approach includes permitting as a specific task in our scheduling process and given the 
+                        magnitude of the assignment, schedules may be updated more frequently to assure compliance 
+                        with the overall project schedule.
+                        <br/><br/>
+                        Catalyst Technical Group is thoroughly familiar with the permitting process and our experience 
+                        in dealing with the regulatory agencies enables us to secure the necessary permits in a most 
+                        expeditious manner.
                     </p>
                 </div>
             </div>
